--- a/PROG2500_A2_Chinook/MainWindow.xaml
+++ b/PROG2500_A2_Chinook/MainWindow.xaml
@@ -14,6 +14,8 @@
             <BitmapImage x:Key="artistsImage" UriSource="/images/artists.png"></BitmapImage>
             <BitmapImage x:Key="albumsImage" UriSource="/images/albums.png"></BitmapImage>
             <BitmapImage x:Key="tracksImage" UriSource="/images/tracks.png"></BitmapImage>
+            <BitmapImage x:Key="musicCatalogImage" UriSource="/images/catalog.png"></BitmapImage>
+            <BitmapImage x:Key="customerOrdersImage" UriSource="/images/customerOrders.png"></BitmapImage>
         </ResourceDictionary>
     </Window.Resources>
 
@@ -47,6 +49,16 @@
                         <Image Source="{StaticResource tracksImage}"></Image>
                     </MenuItem.Icon>
                 </MenuItem>
+                <MenuItem Header="Music Catalog" Click="MusicCatalogButton_Click">
+                    <MenuItem.Icon>
+                        <Image Source="{StaticResource musicCatalogImage}"></Image>
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem x:Name="customerOrders" Header="_View Customer Orders" Click="CustomerOrdersButton_Click">
+                    <MenuItem.Icon>
+                        <Image Source="{StaticResource customerOrdersImage}"></Image>
+                    </MenuItem.Icon>
+                </MenuItem>
             </MenuItem>
         </Menu>
        
@@ -69,6 +81,12 @@
                 </Button>
                 <Button x:Name="ProductsButton" ToolTip="View Tracks" Click="TracksButton_Click">
                     <Image Source="{StaticResource tracksImage}"></Image>
+                </Button>
+                <Button x:Name="MusicCatalogButton" ToolTip="View Music Catalog" Click="MusicCatalogButton_Click">
+                    <Image Source="{StaticResource musicCatalogImage}"></Image>
+                </Button>
+                <Button x:Name="CustomerOrdersButton" ToolTip="View All Customer Orders" Click="CustomerOrdersButton_Click">
+                    <Image Source="{StaticResource customerOrdersImage}"></Image>
                 </Button>
             </StackPanel>
         </ToolBar>
