--- a/PROG2500_A2_Chinook/Pages/ArtistsPage.xaml
+++ b/PROG2500_A2_Chinook/Pages/ArtistsPage.xaml
@@ -14,6 +14,9 @@
 
     <StackPanel>
         <TextBlock Text="Chinook Artists" FontSize="38"></TextBlock>
+        <TextBlock Text="Search" FontSize="22"></TextBlock>
+        <TextBox Name="SearchBox" Width="200" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" 
+                 TextChanged="SearchBox_TextChanged" />
         <DataGrid ItemsSource="{Binding Source={StaticResource artistsViewSource}}" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding ArtistId}" Header="ID"></DataGridTextColumn>
