--- a/PROG2500_A2_Chinook/Pages/AlbumsPage.xaml
+++ b/PROG2500_A2_Chinook/Pages/AlbumsPage.xaml
@@ -13,10 +13,15 @@
     </Page.Resources>
 
     <StackPanel>
-        <TextBlock Text="Chinook Albums" FontSize="38"></TextBlock>
-        <TextBlock Text="Search" FontSize="22"></TextBlock>
-        <TextBox Name="SearchBox" Width="200" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" 
-                 TextChanged="SearchBox_TextChanged" />
+        <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+            <TextBlock Text="Chinook Albums" FontSize="38" VerticalAlignment="Center" Margin="0,0,10,0" />
+
+            <StackPanel Width="Auto" HorizontalAlignment="Right" Orientation="Horizontal">
+                <TextBlock Text="Search Albums: " VerticalAlignment="Center" Margin="10,0,5,0" />
+                <TextBox x:Name="textSearch" Width="200"  Margin="0,0,5,0" />
+                <Button x:Name="btnSearch" Content="Search" Width="75"  Click="btnSearch_Click"/>
+            </StackPanel>
+        </StackPanel>
         <DataGrid ItemsSource="{Binding Source={StaticResource albumsViewSource}}" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding AlbumId}" Header="ID"></DataGridTextColumn>
